<resources>
    <string name="app_name">Messenger</string>
    <string name="validate">Validate your phone</string>
    <string name="validateText">Enter the code received by SMS</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_name">Enter your name</string>
    <string name="leave_item">Leave</string>
    <string name="settings_item">Settings</string>
    <string name="search_item">Search</string>
    <string name="button_submit">Submit</string>
    <string name="button_validate">Validate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teste">Teste</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_messenger">MessengerActivity</string>
</resources>
