<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings_item"
        android:title="@string/settings_item"
        android:orderInCategory="200" app:showAsAction="never"
        />

    <item
        android:id="@+id/leave_item"
        android:title="@string/leave_item"
        android:orderInCategory="500" app:showAsAction="never"
        />
    <item
        android:id="@+id/search_item"
        android:title="@string/search_item"
        android:orderInCategory="300" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        />
    <item
        android:id="@+id/add_item"
        android:title="Add person"
        android:orderInCategory="400" app:showAsAction="always"
        android:icon="@drawable/ic_person_add"
        />

</menu>